<resources>
    <string name="app_name">Compare phones</string>
    <string name="devices_found">Found %1$d devices </string>
    <string name="label_versus">VS</string>
    <string name="button_choose_first_device">Choose first device</string>
    <string name="button_choose_second_device">Choose second device</string>
    <string name="main_compare_two_devices">Compare two devices</string>
    <string name="bottom_navigation_item_recent">Recent</string>
    <string name="bottom_navigation_item_compare">Compare</string>
    <string name="bottom_navigation_item_devices">Devices</string>
    <string name="activity_add_insert_device_name">Insert a device name</string>
    <string name="toolbar_select_device">Select device</string>
    <string name="adddevice_label">Select a device</string>
    <string name="addevice_toolbar_search">Search</string>
    <string name="adddevice_recent">Recent devices</string>
    <string name="recent_comparsions">Recent comparsions</string>
    <string name="view_all">View all</string>
    <string name="recent_devices">Recent devices</string>
    <string name="no_recent_comparsions_yet">No recent comparsions yet</string>
    <string name="no_recent_devices_yet">No recent devices yet</string>
    <string name="comparing_activity_label">Comparsion</string>
    <string name="device_brand">Brand</string>
    <string name="device_status">Status</string>
    <string name="device_announced">Announced</string>
    <string name="device_dimensions">Dimensions</string>
    <string name="device_features">Additional features</string>
    <string name="device_features_c">Features</string>
    <string name="device__3_5mm_jack_">3.5 mm jack</string>
    <string name="device_battery_c">Battery</string>
    <string name="device_os">Operating system</string>
    <string name="device_weight">Weight</string>
    <string name="device_sim">Sim</string>
    <string name="device__2g_bands">2G bands</string>
    <string name="device__3g_bands">3G bands</string>
    <string name="device__4g_bands">4G bands</string>
    <string name="device_primary_">Primary camera</string>
    <string name="device_network_c">Network</string>
    <string name="device_card_slot">Card slot</string>
    <string name="device_resolution">Resolution</string>
    <string name="device_colors">Colors</string>
    <string name="device_usb">USB</string>
    <string name="device_wlan">WLAN</string>
    <string name="device_video">Video</string>
    <string name="device_stand_by">Stand by time</string>
    <string name="device_talk_time">Talk time</string>
    <string name="device_display_c">Fonts and icons</string>
    <string name="device_chipset">Chipset</string>
    <string name="device_technology">Cellural band</string>
    <string name="device_type">Screen type</string>
    <string name="device_speed">Broadband speed</string>
    <string name="device_sensors">Sensors</string>
    <string name="device_gpu">Graphics processing unit</string>
    <string name="device_multitouch">Multitouch</string>
    <string name="device_cpu">CPU</string>
    <string name="device_gps">GPS</string>
    <string name="device_bluetooth">Bluetooth</string>
    <string name="device_browser">Browser</string>
    <string name="device_internal">Internal</string>
    <string name="device_secondary">Secondary camera</string>
    <string name="device_radio">Radio</string>
    <string name="device_alert_types">Alert types</string>
    <string name="device_edge">EGPRS</string>
    <string name="device_music_play">Music</string>
</resources>
