<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.main.MainActivity">

    <Button
            android:id="@+id/main_btn_choosedevice"
            style="@style/ButtonStyle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_green"
            android:text="@string/button_choose_first_device" />


    <androidx.cardview.widget.CardView
            android:id="@+id/main_cv_first_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true"
            tools:visibility="visible">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

            <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/ic_launcher_round" />

            <TextView
                    android:id="@+id/main_tv_firstdevice"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textAlignment="center" />

            <Button
                    android:id="@+id/main_btn_close_first_device"
                    style="@style/CrossButtonStyle"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
            android:id="@+id/main_tv_versus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/label_versus"
            android:textSize="18dp" />

    <Button
            android:id="@+id/main_btn_chooseseconddevice"
            style="@style/ButtonStyle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_green"
            android:text="@string/button_choose_second_device"
            android:textColor="#FFF" />


    <androidx.cardview.widget.CardView
            android:id="@+id/main_cv_second_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardUseCompatPadding="true"
            tools:visibility="visible">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

            <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@mipmap/ic_launcher_round" />

            <TextView
                    android:id="@+id/main_tv_seconddevice"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textAlignment="center" />

            <Button
                    android:id="@+id/main_btn_close_second_device"
                    style="@style/CrossButtonStyle"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <Button
            android:id="@+id/main_btn_compare"
            style="@style/ButtonStyle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_btn_green"
            android:text="Compare devices"
            android:textColor="#FFF"
            android:visibility="gone"
            tools:visibility="visible" />
</LinearLayout>
